Atualização do functions

--- a/PDV/config.json
+++ b/PDV/config.json
@@ -1,6 +1,8 @@
 {
     "Caixa": "teste",
     "Info": "bancada de teste",
-    "User": "",
-    "Password": ""
+    "User": {
+        "usuario":"Antonio",
+        "senha":"inot1234"
+    }
 }
